--- a/sass/main.scss
+++ b/sass/main.scss
@@ -144,5 +144,13 @@ svg {
   &__card {
     height: 30rem;
     width: 20rem;
+    &__title {
+    }
+    &__pop {
+    }
+    &__region {
+    }
+    &__capital {
+    }
   }
 }
