1 hour in and its going well

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ html {
 
 .container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: var(--very-dark-blue-dark);
   padding: 0 10rem 0 10rem; }
 
@@ -116,7 +116,39 @@ svg {
 .grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 4rem; }
+  grid-gap: 10rem;
+  padding: 5rem; }
   .grid__card {
-    height: 30rem;
-    width: 20rem; }
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: var(--dark-blue); }
+    .grid__card__flag {
+      width: 100%;
+      height: 20rem; }
+      .grid__card__flag img {
+        width: 100%;
+        height: 100%; }
+    .grid__card__title {
+      font-size: 3rem;
+      font-weight: 700;
+      padding: 2rem; }
+    .grid__card__pop {
+      font-size: 1.5rem;
+      margin-left: 2rem;
+      margin-bottom: 0.6rem; }
+      .grid__card__pop-font {
+        color: var(--dark-gray); }
+    .grid__card__region {
+      font-size: 1.5rem;
+      margin-left: 2rem;
+      margin-bottom: 0.6rem; }
+      .grid__card__region-font {
+        color: var(--dark-gray); }
+    .grid__card__capital {
+      font-size: 1.5rem;
+      margin-left: 2rem;
+      margin-bottom: 0.6rem;
+      padding-bottom: 4rem; }
+      .grid__card__capital-font {
+        color: var(--dark-gray); }
