--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,14 @@ html {
 
 .container {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   background-color: var(--very-dark-blue-dark);
   padding: 0 10rem 0 10rem; }
+  .container__2 {
+    width: 100%;
+    min-height: 100vh;
+    background-color: var(--very-dark-blue-dark);
+    padding: 0 10rem 0 10rem; }
 
 .navbar {
   background-color: var(--dark-blue);
@@ -135,7 +140,9 @@ svg {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    background-color: var(--dark-blue); }
+    background-color: var(--dark-blue);
+    text-decoration: none;
+    color: inherit; }
     .grid__card__flag {
       width: 100%;
       height: 20rem; }
@@ -165,3 +172,23 @@ svg {
       padding-bottom: 4rem; }
       .grid__card__capital-font {
         color: var(--dark-gray); }
+
+.back {
+  height: 20rem;
+  display: flex;
+  align-items: center;
+  text-decoration: none; }
+  .back__btn {
+    background-color: var(--dark-blue);
+    border: none;
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.6);
+    border-radius: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    font-family: "Nunito Sans";
+    height: 5rem;
+    width: 15rem;
+    font-size: 2rem; }
+    .back__btn svg {
+      margin-right: -2rem; }
