--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,9 +23,15 @@ html {
 
 .container {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   background-color: var(--very-dark-blue-dark);
   padding: 0 10rem 0 10rem;
+  &__2 {
+    width: 100%;
+    min-height: 100vh;
+    background-color: var(--very-dark-blue-dark);
+    padding: 0 10rem 0 10rem;
+  }
 }
 
 .navbar {
@@ -161,6 +167,8 @@ svg {
     flex-direction: column;
     align-items: flex-start;
     background-color: var(--dark-blue);
+    text-decoration: none;
+    color: inherit;
 
     &__flag {
       width: 100%;
@@ -201,6 +209,33 @@ svg {
       &-font {
         color: var(--dark-gray);
       }
+    }
+  }
+}
+/////////////////////////////////////////////////////////////////////////////////////
+/// html 2
+
+.back {
+  height: 20rem;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+
+  &__btn {
+    background-color: var(--dark-blue);
+    border: none;
+    box-shadow: 5px 5px 30px rgba($color: #000000, $alpha: 0.6);
+    border-radius: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    font-family: "Nunito Sans";
+    height: 5rem;
+    width: 15rem;
+    font-size: 2rem;
+
+    & svg {
+      margin-right: -2rem;
     }
   }
 }
