--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
-  font-family: "Nunito Sans"; }
+  font-family: "Nunito Sans";
+  color: var(--very-light-gray); }
 
 .container {
   width: 100%;
@@ -192,3 +193,13 @@ svg {
     font-size: 2rem; }
     .back__btn svg {
       margin-right: -2rem; }
+
+.section {
+  display: flex;
+  flex-direction: row; }
+  .section__left {
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.6);
+    height: 40rem; }
+    .section__left img {
+      height: 100%;
+      width: 100%; }
