--- a/css/style.css
+++ b/css/style.css
@@ -190,16 +190,51 @@ svg {
     font-family: "Nunito Sans";
     height: 5rem;
     width: 15rem;
-    font-size: 2rem; }
+    font-size: 2rem;
+    color: var(--white); }
     .back__btn svg {
       margin-right: -2rem; }
 
 .section {
   display: flex;
-  flex-direction: row; }
+  flex-direction: row;
+  gap: 10rem; }
   .section__left {
     box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.6);
     height: 40rem; }
     .section__left img {
       height: 100%;
       width: 100%; }
+
+.right__title {
+  font-size: 5rem; }
+
+.right__box-border__text {
+  font-weight: 600;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  gap: 2rem; }
+  .right__box-border__text__countries {
+    text-align: center;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+    background-color: var(--dark-blue);
+    color: var(--dark-gray);
+    width: 7rem; }
+
+.country-card__info {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 5rem 0rem;
+  flex-wrap: wrap;
+  max-height: 26rem; }
+
+.country-card__detail {
+  line-height: 2rem;
+  font-size: 2rem;
+  font-weight: 600; }
+
+.country-card__value {
+  font-weight: 400;
+  color: var(--dark-gray); }
