--- a/sass/main.scss
+++ b/sass/main.scss
@@ -105,7 +105,7 @@ svg {
     border-radius: 0.5rem;
     color: var(--very-light-gray);
     height: 4rem;
-    width: 40rem;
+    width: 20vw;
 
     &::placeholder {
       color: var(--dark-gray);
