--- a/css/style.css
+++ b/css/style.css
@@ -136,10 +136,11 @@ svg {
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(29rem, 29rem));
   grid-template-rows: auto;
   grid-gap: 10rem;
-  padding: 5rem; }
+  padding: 5rem;
+  justify-content: space-evenly; }
   .grid__card {
     display: flex;
     flex-direction: column;
