--- a/sass/main.scss
+++ b/sass/main.scss
@@ -172,10 +172,11 @@ svg {
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(29rem, 29rem));
   grid-template-rows: auto;
   grid-gap: 10rem;
   padding: 5rem;
+  justify-content: space-evenly;
 
   &__card {
     display: flex;
