--- a/sass/main.scss
+++ b/sass/main.scss
@@ -283,22 +283,22 @@ svg {
   display: flex;
   flex-direction: row;
   gap: 10rem;
-  flex-wrap: wrap;
+
   width: 100%; /* Ensure it takes full width */
 
   &__left {
-    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.6);
     width: 50%; /* Take up half of the container width */
-    height: auto;
+    height: auto; /* Allow the image to scale with the text */
 
     & img {
       height: auto; /* Maintain aspect ratio */
       width: 100%; /* Fill the parent container */
+      object-fit: cover;
     }
   }
 
   .right {
-    width: 50%; /* Take up the other half of the container */
+    width: 100%; /* Take up the other half of the container */
 
     &__title {
       font-size: 5rem;
@@ -311,6 +311,7 @@ svg {
         display: flex;
         align-items: center;
         gap: 2rem;
+        flex-wrap: wrap;
 
         &__countries {
           text-align: center;
@@ -377,7 +378,8 @@ svg {
     gap: 2rem;
     padding: 5rem 0;
     flex-wrap: wrap;
-    max-height: 26rem;
+    height: 26rem;
+    width: 100%;
   }
 
   &__detail {
